--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,7 +49,7 @@ dependencies {
     implementation "com.google.android.material:material:1.1.0"
 
     // Database ViewModel LiveData Navigation
-    def nav_version = "2.3.0-rc01"
+    def nav_version = "2.3.0"
     def lifecycle_version = "2.2.0"
     def room_version = "2.2.5"
 
@@ -62,4 +62,6 @@ dependencies {
 
     implementation "androidx.navigation:navigation-fragment:$nav_version"
     implementation "androidx.navigation:navigation-ui:$nav_version"
+
+    implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'
 }
