--- a/build.gradle
+++ b/build.gradle
@@ -3,11 +3,15 @@ buildscript {
     repositories {
         google()
         jcenter()
+
+        maven {
+            url 'https://jitpack.io'
+        }
     }
     dependencies {
         classpath "com.android.tools.build:gradle:4.0.0"
 
-        classpath "androidx.navigation:navigation-safe-args-gradle-plugin:2.3.0-rc01"
+        classpath "androidx.navigation:navigation-safe-args-gradle-plugin:2.3.0"
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
@@ -17,6 +21,10 @@ allprojects {
     repositories {
         google()
         jcenter()
+
+        maven {
+            url 'https://jitpack.io'
+        }
     }
 }
 
