--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,13 +12,25 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity android:name=".ui.screens.onboarding.OnboardingActivity"/>
+        <activity
+            android:name=".ui.screens.registration.register.RegisterActivity"
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="adjustResize|stateHidden" />
+        <activity
+            android:name=".ui.screens.registration.login.LoginActivity"
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="adjustResize|stateHidden">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
 
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
         <activity android:name=".ui.screens.activity.ActivityHomeActivity" />
-
         <activity android:name=".ui.screens.water.WaterHomeActivity" />
-
         <activity android:name=".ui.screens.nutrition.home.NutritionHomeActivity" />
-        <activity android:name=".ui.screens.nutrition.food_details.FoodDetailsActivity" />
+        <activity android:name=".ui.screens.nutrition.nutrition_details.NutritionDetailsActivity" />
         <activity android:name=".ui.screens.nutrition.add_food.AddFoodActivity" />
         <activity
             android:name=".ui.screens.nutrition.search.SearchActivity"
@@ -35,16 +47,9 @@
                 android:name="android.app.searchable"
                 android:resource="@xml/searchable" />
         </activity>
-
         <activity
             android:name=".ui.screens.splash.SplashActivity"
-            android:screenOrientation="portrait">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
+            android:screenOrientation="portrait" />
     </application>
 
 </manifest>
