--- a/build.gradle
+++ b/build.gradle
@@ -12,8 +12,7 @@ buildscript {
         classpath "com.android.tools.build:gradle:4.0.0"
 
         classpath "androidx.navigation:navigation-safe-args-gradle-plugin:2.3.0"
-        // NOTE: Do not place your application dependencies here; they belong
-        // in the individual module build.gradle files
+        classpath 'com.google.gms:google-services:4.3.3'
     }
 }
 
