--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,13 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ui.screens.onboarding.OnboardingActivity"/>
+        <activity android:name=".ui.screens.onboarding.OnboardingActivity" >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
         <activity
             android:name=".ui.screens.registration.register.RegisterActivity"
             android:screenOrientation="portrait"
@@ -20,13 +26,7 @@
         <activity
             android:name=".ui.screens.registration.login.LoginActivity"
             android:screenOrientation="portrait"
-            android:windowSoftInputMode="adjustResize|stateHidden">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
+            android:windowSoftInputMode="adjustResize|stateHidden" />
         <activity android:name=".ui.screens.activity.ActivityHomeActivity" />
         <activity android:name=".ui.screens.water.WaterHomeActivity" />
         <activity android:name=".ui.screens.nutrition.home.NutritionHomeActivity" />
@@ -49,7 +49,9 @@
         </activity>
         <activity
             android:name=".ui.screens.splash.SplashActivity"
-            android:screenOrientation="portrait" />
+            android:screenOrientation="portrait">
+
+        </activity>
     </application>
 
 </manifest>
