--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,10 +29,10 @@ android {
         }
     }
 
-    buildFeatures {
-        dataBinding true
-        viewBinding true
-    }
+//    buildFeatures {
+//        dataBinding true
+//        viewBinding true
+//    }
 }
 
 dependencies {
@@ -79,6 +79,6 @@ dependencies {
 
     // Firebase
     implementation 'com.google.firebase:firebase-analytics:17.4.4'
-    implementation 'com.google.firebase:firebase-database:19.3.1'
+    implementation 'com.google.firebase:firebase-firestore:21.5.0'
     implementation 'com.google.firebase:firebase-auth:19.3.2'
 }
